# IMDB-Query

./: CMakeLists.txt  IQuery.c  IQuery.h  README.md  apiHandler.c  apiHandler.h  binService.c  binService.h  bpTree.c  bpTree.h  dbContext.c  dbContext.h  entities.c  entities.h  filterGenre.h  main.c  sysManager.c  sysManager.h  systemManager.c  systemManager.h  titleSearch.c  titleSearch.h  util.c  util.h
